# tailor

./: build.js  build.ts  cli.js  cli.ts  jsr.json  package-lock.json  package.json  transpile.js  transpile.ts  tsconfig.json
lib/postcss-plugin-remapper/: deno.json  index.ts
lib/postcss-remapper/: index.ts  jsr.json  package.json
lib/swc-plugin-remapper/: Cargo.toml  index.js  package.json
lib/swc-plugin-remapper/src/: lib.rs  visitor.rs
lib/swc-plugin-transform-module-specifiers/: Cargo.toml  index.js  package.json
lib/swc-plugin-transform-module-specifiers/src/: config.rs  lib.rs  visitor.rs
lib/swc-plugin-transform-module-specifiers/transform/: Cargo.toml
lib/swc-plugin-transform-module-specifiers/transform/src/: visitor.rs
lib/swc-remapper/: .gitignore  Cargo.toml  index.js  index.ts  jsr.json  package.json
postcss-remapper/: index.ts  package.json
src/: build.ts  cli.ts  deno.json  deno.jsonc  jsr.json  lib.ts  package.json  timestamp.ts  transpile.ts  util.ts
swc-remapper/: package.json
swc-remapper/src/: lib.rs
