[package]
name = "swc-plugin-transform-module-specifiers"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
transform  = { path = "transform" }
serde_json = "1.0.117"
swc_core   = { version = "0.95.0", features = ["ecma_plugin_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
